--- a/zebraCrossing.html
+++ b/zebraCrossing.html
@@ -37,6 +37,9 @@
     <tr>
         <td>4</td><td>deadbrother</td><td>400</td><td>90</td>
     </tr>
+    <tr>
+        <td>5</td><td>andison</td><td>400</td><td>90</td>
+    </tr>
 </table>
 <script>
     var trs=document.getElementsByTagName("tr");
